@@ -1,5 +1,10 @@
 2011-03-16  Corinna Vinschen  <corinna@vinschen.de>
 
+	* crt0.c (mainCRTStartup): Move call to _feinitialise from here...
+	* dcrt0.cc (_dll_crt0): ...to here.
+
+2011-03-16  Corinna Vinschen  <corinna@vinschen.de>
+
 	* winver.rc: Fix copyright dates.
 
 2011-03-14  Corinna Vinschen  <corinna@vinschen.de>
